--- a/HUGS/Objects/HUGS.build_log.htm
+++ b/HUGS/Objects/HUGS.build_log.htm
@@ -27,7 +27,7 @@ Project File Date:  07/20/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'd:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling setup.c...
 linking...
 Program Size: Code=20408 RO-data=1168 RW-data=152 ZI-data=2312  
 FromELF: creating hex file...
@@ -73,24 +73,24 @@ Package Vendor: GigaDevice
    * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:ADC:3.1.0
-      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_adc.c
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_adc.h
+      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_adc.c
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:DMA:3.1.0
-      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_dma.h
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_dma.c
+      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_dma.h
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:FWDGT:3.1.0
-      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_fwdgt.h
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_fwdgt.c
+      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_fwdgt.h
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:GPIO:3.1.0
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_gpio.h
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_gpio.c
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:I2C:3.1.0
-      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_i2c.h
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_i2c.c
+      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_i2c.h
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:MCUDBG:3.1.0
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_dbg.h
@@ -101,20 +101,20 @@ Package Vendor: GigaDevice
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_misc.c
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:OPA:3.1.0
-      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_opa.c
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_opa.h
+      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_opa.c
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:PMU:3.1.0
-      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_pmu.h
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_pmu.c
+      Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_pmu.h
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:RCU:3.1.0
       Source file:   Device\Firmware\Peripherals\src\gd32f1x0_rcu.c
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_rcu.h
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:SYSCFG:3.1.0
-      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_syscfg.c
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_syscfg.h
+      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_syscfg.c
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:TIMER:3.1.0
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_timer.h
@@ -125,16 +125,16 @@ Package Vendor: GigaDevice
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_usart.h
 
    * Component: GigaDevice::Device:GD32F1x0_StdPeripherals:WWDGT:3.1.0
-      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_wwdgt.c
       Include file:  Device\Firmware\Peripherals\inc\gd32f1x0_wwdgt.h
+      Source file:   Device\Firmware\Peripherals\src\gd32f1x0_wwdgt.c
 
    * Component: GigaDevice::Device:GD32F1x0_libopt:3.1.0
       Include file:  Device\Include\gd32f1x0_libopt.h
 
    * Component: GigaDevice::Device:Startup:3.1.0
-      Source file:   Device\Source\startup_gd32f1x0.s
       Source file:   Device\Source\system_gd32f1x0.c
       Include file:  Device\Include\gd32f1x0.h
+      Source file:   Device\Source\startup_gd32f1x0.s
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
